--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
     <div>
 
         Push 3.1 opgaven
+        Nieuwe Div
 
     </div>
+
+    <p>
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt tempora nam sit, totam nisi ratione nemo sint 
+        ullam reprehenderit officia, reiciendis blanditiis dignissimos architecto velit nulla 
+        beatae, aliquid facilis aut?
+
+    </p>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
         Possimus sint fuga eligendi nihil repellat dolor 
