--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
         Push 3.1 opgaven
         Nieuwe Div
-
-        quinten is naast mij
+        <br>
+        quinten is naast mij :[
+        Gang
 
     </div>
 
